moves desktop and laptot specific to bottom

--- a/i3-laptop/.config/i3/config
+++ b/i3-laptop/.config/i3/config
@@ -163,10 +163,13 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 # Assign applications to workspaces
-assign [class="Firefox"] 1
+assign [class="Firefox"] 0
 assign [class="Alacritty"] 2
 assign [class="Code"] 3
+assign [class="Slack"] 4
+assign [class="Discord"] 4
 assign [class="Nautilus"] 6
+assign [class="PulseEffects"] 10
 
 for_window [class="Spotify"] move to workspace number 5
 
@@ -203,6 +206,8 @@ client.focused_inactive #E3E3E3 #0F1212 #D3D7CF #D3D7CF   #0F1212
 client.unfocused        #0F1212 #0F1212 #D3D7CF #0F1212   #0F1212
 client.urgent           #2F343A #C9282D #D3D7CF #C9282D   #C9282D
 client.placeholder      #0F1212 #0F1212 #D3D7CF #0F1212   #0F1212
+
+# Laptop specific
 
 exec --no-startup-id xrandr --output eDP-1-1 --mode 2048x1152
 exec xinput set-prop "SYNA2393:00 06CB:7A13 Touchpad" "libinput Tapping Enabled" 1
