--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -181,7 +181,7 @@ assign [class="PulseEffects"] 10
 for_window [class="Spotify"] move to workspace number 5
 
 # Spacing windows titles
-for_window [class=".*"] title_format "  %title%"
+for_window [class=".*"] title_format "  %title"
 
 # Media player controls
 bindsym XF86AudioPlay exec playerctl play-pause
