--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,14 +4,14 @@ unbind-key C-w
 bind-key C-w send-prefix C-w
 
 # Control arrow keys to switch panes
-bind -n C-Left select-pane -L
-bind -n C-Right select-pane -R
-bind -n C-Up select-pane -U
-bind -n C-Down select-pane -D
+bind -n S-Left select-pane -L
+bind -n S-Right select-pane -R
+bind -n S-Up select-pane -U
+bind -n S-Down select-pane -D
 
 # Shift arrow to switch windows
-bind -n S-Left previous-window
-bind -n S-Right next-window
+bind -n C-Left previous-window
+bind -n C-Right next-window
 
 # Mouse mode
 setw -g mouse on
