fish and tmux running together

--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -1,3 +1,11 @@
+# Running fish, tmux and attach session when opening Alacritty
+shell:
+  program: /usr/bin/fish
+  args:
+    - -l
+    - -c
+    - "tmux attach || tmux new -s main"
+
 colors:
   # Default colors
   primary:
