--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,10 @@
+# Default shell
+set-option -g default-shell /usr/bin/fish
+
 # Send prefix
+unbind-key C-b
 set-option -g prefix C-w
-unbind-key C-w
-bind-key C-w send-prefix C-w
+bind-key C-w send-prefix
 
 # Control arrow keys to switch panes
 bind -n S-Left select-pane -L
