--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,8 +13,8 @@ bind -n S-Up select-pane -U
 bind -n S-Down select-pane -D
 
 # Shift arrow to switch windows
-bind -n C-Left previous-window
-bind -n C-Right next-window
+bind -n C-S-Left previous-window
+bind -n C-S-Right next-window
 
 # Mouse mode
 setw -g mouse on
