--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -56,8 +56,9 @@ font-1 = Bitstream Vera Sans Mono Nerd Font Complete Mono:size=12;3
 font-2 = FontAwesome:style=Regular:size=12;2.5
 font-3 = DejaVu Sans;2
 
-modules-left = i3 ; xwindow
-modules-right = filesystem battery pulseaudio memory cpu wlan eth date ; xkeyboard
+modules-left = i3
+modules-right = filesystem battery pulseaudio memory cpu date
+; eth xkeyboard wlan
 
 cursor-click = pointer
 cursor-scroll = ns-resize
