no escape time in tmux to avoid conflicting with helix

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -22,3 +22,6 @@ setw -g mouse on
 # Set easier window split keys
 bind-key v split-window -h
 bind-key h split-window -v
+
+# Disable escape tiemout
+set -sg escape-time 0
