rebinds some tmux keys

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -23,5 +23,9 @@ setw -g mouse on
 bind-key v split-window -h
 bind-key h split-window -v
 
-# Disable escape tiemout
+# Re bind kill pane and window to avoid confirmation
+bind-key & kill-window
+bind-key x kill-pane
+
+# Disable escape timeout
 set -sg escape-time 0
