alias to attach tmux, not when fish starts

--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -1,10 +1,10 @@
 # Running fish, tmux and attach session when opening Alacritty
 shell:
   program: /usr/bin/fish
-  args:
-    - -l
-    - -c
-    - "tmux attach || tmux new -s main"
+  # args:
+    # - -l
+    # - -c
+    # - "tmux attach || tmux new -s main"
 
 colors:
   # Default colors
