tmux split windows from current location

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,9 +19,10 @@ bind -n C-S-Right next-window
 # Mouse mode
 setw -g mouse on
 
-# Set easier window split keys
-bind-key v split-window -h
-bind-key h split-window -v
+# open split in current directory
+bind c new-window -c "#{pane_current_path}"
+bind-key v split-window -h -c "#{pane_current_path}"
+bind-key h split-window -v -c "#{pane_current_path}"
 
 # Re bind kill pane and window to avoid confirmation
 bind-key & kill-window
