updates tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,8 +2,10 @@
 set-option -g default-shell /usr/bin/fish
 
 # Send prefix
-unbind-key C-b
 set-option -g prefix C-w
+set-option -g default-terminal "screen-256color"
+
+unbind-key C-b
 bind-key C-w send-prefix
 
 # Control arrow keys to switch panes
