updates fish config to have specific folder for user function

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 nvim/.config/nvim/plugin
+fish/.config/fish/fish_variables
+fish/.config/fish/functions/*
+fish/.config/fish/completions/*
+fish/.config/fish/conf.d/*
