--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -21,7 +21,6 @@ background = #0F1212
 background-alt = #373B41
 foreground = #d3d7cf
 primary = #C9282D
-; primary = #F0C674
 secondary = #8ABEB7
 alert = #A54242
 disabled = #707880
@@ -46,15 +45,13 @@ border-color = #00000000
 padding-left = 0
 padding-right = 4
 
-module-margin = 3
+module-margin = 2
 
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = System San Francisco:size=12;3
-font-1 = Bitstream Vera Sans Mono Nerd Font Complete Mono:size=12;3
-font-2 = FontAwesome:style=Regular:size=12;2.5
-font-3 = DejaVu Sans;2
+font-0 = Hack Nerd Font:size=12;3
+font-1 = DejaVu Sans;2
 
 modules-left = i3
 modules-right = filesystem battery pulseaudio memory cpu date
@@ -107,10 +104,10 @@ label-empty-padding = 4
 ws-icon-0 = 1;
 ws-icon-1 = 2;
 ws-icon-2 = 3;
-ws-icon-3 = 4;
-ws-icon-4 = 5;
+ws-icon-3 = 4;
+ws-icon-4 = 5;
 ws-icon-5 = 6;
-ws-icon-default = ♟
+ws-icon-default = 
 
 [module/xwindow]
 type = internal/xwindow
@@ -122,7 +119,7 @@ interval = 25
 
 mount-0 = /
 
-label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
+label-mounted = %{F#C9282D}%{F-} %percentage_used%%
 
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
@@ -130,26 +127,34 @@ label-unmounted-foreground = ${colors.disabled}
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = " "
+; interval = 2
+; format-volume-prefix = " "
+;
 format-volume-prefix-foreground = ${colors.primary}
-format-volume = <label-volume>
+format-volume = <ramp-volume> <label-volume>
+ramp-volume-foreground = ${colors.primary}
 
-label-volume = %percentage%%
+; label-volume = %percentage%%
 
-label-muted = ""
-label-muted-foreground = ${colors.disabled}
+ramp-volume-0 = 
+ramp-volume-1 = 奔
+ramp-volume-2 = 墳
+ramp-volume-3 = 
+
+label-muted = ﱝ
+label-muted-foreground = ${colors.primary}
 
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "RAM "
+format-prefix = " "
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "CPU "
+format-prefix = "龍 "
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
@@ -175,7 +180,7 @@ type = internal/date
 interval = 1
 
 date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
+date-alt = %d-%m-%Y %H:%M:%S
 
 label = %date%
 label-foreground = ${colors.primary}
