--- a/i3-laptop/.config/i3/config
+++ b/i3-laptop/.config/i3/config
@@ -34,7 +34,7 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+Shift+A kill
@@ -208,4 +208,5 @@ client.placeholder      #0F1212 #0F1212 #D3D7CF #0F1212   #0F1212
 
 # Laptop specific
 exec --no-startup-id xrandr --output eDP-1-1 --mode 2048x1152
+exec --no-startup-id xrandr --output eDP1 --mode 2048x1152
 exec xinput set-prop "SYNA2393:00 06CB:7A13 Touchpad" "libinput Tapping Enabled" 1
