--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ fish/.config/fish/fish_variables
 fish/.config/fish/functions/*
 fish/.config/fish/completions/*
 fish/.config/fish/conf.d/*
+fish/.config/fish/fish_plugins
