--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -131,8 +131,8 @@ type = internal/pulseaudio
 ; format-volume-prefix = " "
 ;
 format-volume-prefix-foreground = ${colors.primary}
-format-volume = <ramp-volume> <label-volume>
 ramp-volume-foreground = ${colors.primary}
+format-volume = <ramp-volume> <label-volume>
 
 ; label-volume = %percentage%%
 
@@ -197,21 +197,37 @@ full-at = 99
 ; New in version 3.6.0
 low-at = 5
 
+ramp-capacity-foreground = ${colors.primary}
+
+; label-charging = %percentage%
+format-charging = <animation-charging> <label-charging>
+format-discharging = <ramp-capacity>  <label-discharging>
+
+; label-discharging = Discharging %percentage%
+
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+
+animation-charging-framerate = 250
+
 ; Use the following command to list batteries and adapters:
 ; $ ls -1 /sys/class/power_supply/
-battery = BAT0
+battery = BAT1
 adapter = ADP1
 
-; If an inotify event haven't been reported in this many
-; seconds, manually poll for new values.
-;
-; Needed as a fallback for systems that don't report events
-; on sysfs/procfs.
-;
-; Disable polling by setting the interval to 0.
-;
 ; Default: 5
-poll-interval = 5
+poll-interval = 2
+
+animation-low-0 = !
+animation-low-1 = 
+animation-low-framerate = 200
 
 [settings]
 screenchange-reload = true
