makes polybar battery animation working

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -197,13 +197,9 @@ full-at = 99
 ; New in version 3.6.0
 low-at = 5
 
-ramp-capacity-foreground = ${colors.primary}
-
 ; label-charging = %percentage%
-format-charging = <animation-charging> <label-charging>
+format-charging = %{F#C9282D}<animation-charging>%{F-}  <label-charging>
 format-discharging = <ramp-capacity>  <label-discharging>
-
-; label-discharging = Discharging %percentage%
 
 ramp-capacity-0 = 
 ramp-capacity-1 = 
@@ -215,7 +211,9 @@ animation-charging-0 = 
 animation-charging-1 = 
 animation-charging-2 = 
 
-animation-charging-framerate = 250
+animation-charging-framerate = 500
+
+ramp-capacity-foreground = ${colors.primary}
 
 ; Use the following command to list batteries and adapters:
 ; $ ls -1 /sys/class/power_supply/
