--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -10,7 +10,8 @@ colors:
   # Default colors
   primary:
     background: '#0F1212'
-    foreground: '#d3d7cf'
+    foreground: '#e3e3e3'
+    # foreground: '#d3d7cf'
 
     # Bright and dim foreground colors
     #
