--- a/i3-laptop/.config/i3/config
+++ b/i3-laptop/.config/i3/config
@@ -210,3 +210,6 @@ client.placeholder      #0F1212 #0F1212 #D3D7CF #0F1212   #0F1212
 exec --no-startup-id xrandr --output eDP-1-1 --mode 2048x1152
 exec --no-startup-id xrandr --output eDP1 --mode 2048x1152
 exec xinput set-prop "SYNA2393:00 06CB:7A13 Touchpad" "libinput Tapping Enabled" 1
+
+bindsym $mod+asterisk exec i3lock -c 000000
+
