--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ fish/.config/fish/functions/*
 fish/.config/fish/completions/*
 fish/.config/fish/conf.d/*
 fish/.config/fish/fish_plugins
+fish/.config/fish/fishd.tmp.*
