--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -52,3 +52,10 @@ bind-key -T copy-mode-vi 'S-Down' select-pane -D
 bind-key -T copy-mode-vi 'S-Up' select-pane -U
 bind-key -T copy-mode-vi 'S-Right' select-pane -R
 bind-key -T copy-mode-vi 'S-\' select-pane -l
+
+
+# Colors
+set -g status-style bg=default
+# set -g status-bg black
+# set -g status-fg white
+
