updates tmux conf to use hjkl, adds aliases

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -37,20 +37,20 @@ set -sg escape-time 0
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n 'S-Left' if-shell "$is_vim" 'send-keys S-Left'  'select-pane -L'
-bind-key -n 'S-Down' if-shell "$is_vim" 'send-keys S-Down'  'select-pane -D'
-bind-key -n 'S-Up' if-shell "$is_vim" 'send-keys S-Up'  'select-pane -U'
-bind-key -n 'S-Right' if-shell "$is_vim" 'send-keys S-Right'  'select-pane -R'
+bind-key -n 'S-H' if-shell "$is_vim" 'send-keys S-H'  'select-pane -L'
+bind-key -n 'S-J' if-shell "$is_vim" 'send-keys S-J'  'select-pane -D'
+bind-key -n 'S-K' if-shell "$is_vim" 'send-keys S-K'  'select-pane -U'
+bind-key -n 'S-L' if-shell "$is_vim" 'send-keys S-L'  'select-pane -R'
 tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
 if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
     "bind-key -n 'S-\\' if-shell \"$is_vim\" 'send-keys S-\\'  'select-pane -l'"
 if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
     "bind-key -n 'S-\\' if-shell \"$is_vim\" 'send-keys S-\\\\'  'select-pane -l'"
 
-bind-key -T copy-mode-vi 'S-Left' select-pane -L
-bind-key -T copy-mode-vi 'S-Down' select-pane -D
-bind-key -T copy-mode-vi 'S-Up' select-pane -U
-bind-key -T copy-mode-vi 'S-Right' select-pane -R
+bind-key -T copy-mode-vi 'S-H' select-pane -L
+bind-key -T copy-mode-vi 'S-J' select-pane -D
+bind-key -T copy-mode-vi 'S-K' select-pane -U
+bind-key -T copy-mode-vi 'S-L' select-pane -R
 bind-key -T copy-mode-vi 'S-\' select-pane -l
 
 
