--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -217,8 +217,8 @@ ramp-capacity-foreground = ${colors.primary}
 
 ; Use the following command to list batteries and adapters:
 ; $ ls -1 /sys/class/power_supply/
-battery = BAT1
-adapter = ADP1
+battery = BAT0
+adapter = AC
 
 ; Default: 5
 poll-interval = 2
