--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -87,9 +87,9 @@ bindsym $mod+Shift+space floating toggle
 bindsym $mod+space focus mode_toggle
 
 # focus the parent container
-bindsym $mod+q focus parent
+# bindsym $mod+q focus parent
 
-# focus the child container
+# focus the child containe
 #bindsym $mod+d focus child
 
 # Define names for default workspaces for which we configure key bindings later on.
@@ -191,7 +191,7 @@ bindsym XF86AudioPause exec playerctl pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
-bindsym $mod+Shift+S exec toggle-sinks
+bindsym $mod+Shift+s exec --no-startup-id ~/.dotfiles/bin/.local/bin/toggle-sinks
 
 # Screenshots
 bindsym Print exec --no-startup-id maim "/home/$USER/Pictures/$(date)"
