--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -56,10 +56,12 @@ bind-key -T copy-mode-vi 'S-\' select-pane -l
 
 # Colors
 set -g status-style bg=default
+set -g status-left ""
+setw -g window-status-format "#{pane_current_path}".
 # set -g status-bg black
 # set -g status-fg white
-#
-# bind -n C-Left resize-pane -L 2
-# bind -n C-Right resize-pane -R 2
-# bind -n C-Up resize-pane -U 2
-# bind -n C-Down resize-pane -D 2
+
+bind -n C-Left resize-pane -L 2
+bind -n C-Right resize-pane -R 2
+bind -n C-Up resize-pane -U 2
+bind -n C-Down resize-pane -D 2
