tmux: plugin dracula + remaps with hjkl

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,65 +3,55 @@ set-option -g default-shell /usr/bin/zsh
 
 # Send prefix
 set-option -g prefix C-w
-set-option -g default-terminal "screen-256color"
+# set-option -g default-terminal "screen-256color"
+
 
 unbind-key C-b
 bind-key C-w send-prefix
 
-# Control arrow keys to switch panes
-bind -n S-Left select-pane -L
-bind -n S-Right select-pane -R
-bind -n S-Up select-pane -U
-bind -n S-Down select-pane -D
+bind r source-file ~/.tmux.conf
 
-# Shift arrow to switch windows
-bind -n C-S-Left previous-window
-bind -n C-S-Right next-window
-
-# Mouse mode
-setw -g mouse on
-
-# open split in current directory
-bind c new-window -c "#{pane_current_path}"
-bind-key v split-window -h -c "#{pane_current_path}"
-bind-key h split-window -v -c "#{pane_current_path}"
-
-# Re bind kill pane and window to avoid confirmation
-bind-key & kill-window
-bind-key x kill-pane
-
-# Disable escape timeout
-set -sg escape-time 0
-
-# Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n 'S-H' if-shell "$is_vim" 'send-keys S-H'  'select-pane -L'
-bind-key -n 'S-J' if-shell "$is_vim" 'send-keys S-J'  'select-pane -D'
-bind-key -n 'S-K' if-shell "$is_vim" 'send-keys S-K'  'select-pane -U'
-bind-key -n 'S-L' if-shell "$is_vim" 'send-keys S-L'  'select-pane -R'
-tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
-if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'S-\\' if-shell \"$is_vim\" 'send-keys S-\\'  'select-pane -l'"
-if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'S-\\' if-shell \"$is_vim\" 'send-keys S-\\\\'  'select-pane -l'"
-
-bind-key -T copy-mode-vi 'S-H' select-pane -L
-bind-key -T copy-mode-vi 'S-J' select-pane -D
-bind-key -T copy-mode-vi 'S-K' select-pane -U
-bind-key -T copy-mode-vi 'S-L' select-pane -R
-bind-key -T copy-mode-vi 'S-\' select-pane -l
-
-
-# Colors
-set -g status-style bg=default
-set -g status-left ""
-setw -g window-status-format "#{pane_current_path}".
-# set -g status-bg black
-# set -g status-fg white
+# act like vim
+setw -g mode-keys vi
+bind -n C-h select-pane -L
+bind -n C-j select-pane -D
+bind -n C-k select-pane -U
+bind -n C-l select-pane -R
 
 bind -n C-Left resize-pane -L 2
 bind -n C-Right resize-pane -R 2
 bind -n C-Up resize-pane -U 2
 bind -n C-Down resize-pane -D 2
+
+# Mouse mode
+setw -g mouse on
+
+bind-key h previous-window
+bind-key l next-window
+
+# open split in current directory
+bind c new-window -c "#{pane_current_path}"
+bind-key v split-window -h -c "#{pane_current_path}"
+bind-key b split-window -v -c "#{pane_current_path}"
+
+# Re bind kill pane and window to avoid confirmation
+# bind-key & kill-window
+bind-key x kill-pane
+
+# Disable escape timeout
+set -sg escape-time 0
+
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'dracula/tmux'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
+set -g @dracula-show-powerline true
+set -g @dracula-fixed-location "Lyon"
+set -g @dracula-plugins "weather"
+set -g @dracula-show-fahrenheit false
+set -g @dracula-show-flags true
+set -g @dracula-show-left-icon session 
+set -g status-position bottom
+
+run '~/.tmux/plugins/tpm/tpm'
