--- a/nvim/.config/nvim/lua/user/snippets/package.json
+++ b/nvim/.config/nvim/lua/user/snippets/package.json
@@ -22,6 +22,10 @@
       {
         "language": "vue",
         "path": "./vue.json"
+      },
+      {
+        "language": "rust",
+        "path": "./rust.json"
       }
     ]
   }
