[tmux] renames panes with curent file basename

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -55,3 +55,5 @@ set -g @dracula-show-left-icon session
 set -g status-position bottom
 
 run '~/.tmux/plugins/tpm/tpm'
+
+setw -g automatic-rename-format "#{b:pane_current_path}"
