configs vi mode tmux and zsh

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,6 +29,10 @@ setw -g mouse on
 bind-key h previous-window
 bind-key l next-window
 
+# Copy mode
+unbind [
+bind u copy-mode
+
 # open split in current directory
 bind c new-window -c "#{pane_current_path}"
 bind-key v split-window -h -c "#{pane_current_path}"
