--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -181,6 +181,7 @@ for_window [class="Spotify"] move to workspace number 5
 
 # Floating Applications
 for_window [class="Calculator"] floating enable
+for_window [class="Galculator" instance="galculator"] floating enable
 
 # Spacing windows titles
 for_window [class=".*"] title_format "  %title"
