--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -192,7 +192,7 @@ bindsym XF86AudioPause exec playerctl pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
-bindsym $mod+Shift+s exec --no-startup-id ~/.dotfiles/bin/.local/bin/toggle-sinks
+bindsym $mod+Shift+s exec --no-startup-id toggle-sinks
 
 # Screenshots
 bindsym Print exec --no-startup-id maim "/home/$USER/Pictures/Screenshots/$(date +%s)"
