adds tmux bindings for copying

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,7 +7,7 @@ set-option -g prefix C-w
 
 
 unbind-key C-b
-bind-key C-w send-prefix
+bind C-w send-prefix
 
 bind r source-file ~/.tmux.conf
 
@@ -31,16 +31,20 @@ bind-key l next-window
 
 # Copy mode
 unbind [
-bind u copy-mode
+bind u copy-mode 
+bind -T copy-mode v send -X begin-selection
+bind -T copy-mode r send -X rectangle-toggle
+bind -T copy-mode y send -X copy-pipe-and-cancel
+bind p paste-buffer
 
 # open split in current directory
 bind c new-window -c "#{pane_current_path}"
-bind-key v split-window -h -c "#{pane_current_path}"
-bind-key b split-window -v -c "#{pane_current_path}"
+# bind v split-window -h -c "#{pane_current_path}"
+# bind b split-window -v -c "#{pane_current_path}"
 
 # Re bind kill pane and window to avoid confirmation
 # bind-key & kill-window
-bind-key x kill-pane
+bind x kill-pane
 
 # Disable escape timeout
 set -sg escape-time 0
