--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -19,6 +19,7 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 exec --no-startup-id feh --bg-fill ~/Pictures/Wallpapers/main.jpg
+exec --no-startup-id greenclip daemon>/dev/null
 
 # exec_always --no-startup-id "killall polybar; polybar -r default"
 exec --no-startup-id polybar -r default
@@ -231,3 +232,4 @@ workspace 4 output $monitor2
 workspace 5 output $monitor2
 
 bindsym $mod+asterisk exec i3lock -c 000000
+
