uncomment split commands in tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -39,8 +39,8 @@ bind p paste-buffer
 
 # open split in current directory
 bind c new-window -c "#{pane_current_path}"
-# bind v split-window -h -c "#{pane_current_path}"
-# bind b split-window -v -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
+bind b split-window -v -c "#{pane_current_path}"
 
 # Re bind kill pane and window to avoid confirmation
 # bind-key & kill-window
