--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -6,6 +6,9 @@ shell:
     # - -c
     # - "tmux attach || tmux new -s main"
 
+key_bindings:
+  - { key: P, mods: Control, action: Paste }
+
 colors:
   # Default colors
   primary:
