--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,7 +5,6 @@ set-option -g default-shell /usr/bin/zsh
 set-option -g prefix C-w
 # set-option -g default-terminal "screen-256color"
 
-
 unbind-key C-b
 bind C-w send-prefix
 
@@ -29,13 +28,15 @@ setw -g mouse on
 bind-key h previous-window
 bind-key l next-window
 
+set -g set-clipboard off
+
 # Copy mode
 unbind [
+
 bind u copy-mode 
-bind -T copy-mode v send -X begin-selection
-bind -T copy-mode r send -X rectangle-toggle
-bind -T copy-mode y send -X copy-pipe-and-cancel
-bind p paste-buffer
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi r send -X rectangle-toggle
+bind -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -sel clip'
 
 # open split in current directory
 bind c new-window -c "#{pane_current_path}"
