--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -47,6 +47,13 @@ bind b split-window -v -c "#{pane_current_path}"
 # bind-key & kill-window
 bind x kill-pane
 
+not_tmux='`echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"` || `echo "#{pane_current_command}" | grep -iqE "(^|\/)fzf"`'
+echo not_tmux
+bind-key -n C-h if-shell "$not_tmux" "send-keys C-h" "select-pane -L"
+bind-key -n C-j if-shell "$not_tmux" "send-keys C-j" "select-pane -D"
+bind-key -n C-k if-shell "$not_tmux" "send-keys C-k" "select-pane -U"
+bind-key -n C-l if-shell "$not_tmux" "send-keys C-l" "select-pane -R"
+
 # Disable escape timeout
 set -sg escape-time 0
 
