--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,7 +28,7 @@ setw -g mouse on
 bind-key h previous-window
 bind-key l next-window
 
-set -g set-clipboard off
+# set -g set-clipboard off
 
 # Copy mode
 unbind [
@@ -48,7 +48,6 @@ bind b split-window -v -c "#{pane_current_path}"
 bind x kill-pane
 
 not_tmux='`echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"` || `echo "#{pane_current_command}" | grep -iqE "(^|\/)fzf"`'
-echo not_tmux
 bind-key -n C-h if-shell "$not_tmux" "send-keys C-h" "select-pane -L"
 bind-key -n C-j if-shell "$not_tmux" "send-keys C-j" "select-pane -D"
 bind-key -n C-k if-shell "$not_tmux" "send-keys C-k" "select-pane -U"
