--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -37,7 +37,7 @@ underline-size = 2
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-line-size = 3pt
+; line-size = 3pt
 
 border-size = 0
 border-color = #00000000
@@ -50,19 +50,17 @@ module-margin = 2
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = Hack Nerd Font:size=12;3
+font-0 = Hack Nerd Font:size=13;3
 font-1 = DejaVu Sans;2
 
 modules-left = i3
-modules-right = filesystem battery pulseaudio memory cpu date
+modules-right = filesystem battery pulseaudio memory cpu date tray
 ; eth xkeyboard wlan
 
 cursor-click = pointer
 cursor-scroll = ns-resize
 
 enable-ipc = true
-
-tray-position = right
 
 ; wm-restack = generic
 ; wm-restack = bspwm
@@ -137,11 +135,11 @@ format-volume = <ramp-volume> <label-volume>
 ; label-volume = %percentage%%
 
 ramp-volume-0 = 
-ramp-volume-1 = 奔
-ramp-volume-2 = 墳
+ramp-volume-1 = 󰖀
+ramp-volume-2 = 󰕾
 ramp-volume-3 = 
 
-label-muted = ﱝ
+label-muted = 󰝟
 label-muted-foreground = ${colors.primary}
 
 [module/memory]
@@ -226,6 +224,13 @@ poll-interval = 2
 animation-low-0 = !
 animation-low-1 = 
 animation-low-framerate = 200
+
+[module/tray]
+type = internal/tray
+
+format-margin = 8px
+tray-spacing = 8px
+tray-size = 25px
 
 [settings]
 screenchange-reload = true
