--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,6 @@
+
 # Default shell
+unbind-key -a
 set-option -g default-shell /usr/bin/zsh
 
 # Send prefix
@@ -8,14 +10,12 @@ set-option -g prefix C-w
 unbind-key C-b
 bind C-w send-prefix
 
-bind r source-file ~/.tmux.conf
-
 # act like vim
 setw -g mode-keys vi
-bind -n C-h select-pane -L
-bind -n C-j select-pane -D
-bind -n C-k select-pane -U
-bind -n C-l select-pane -R
+# bind -n C-h select-pane -L
+# bind -n C-l select-pane -R
+# bind -n C-j select-pane -D
+# bind -n C-k select-pane -U
 
 bind -n C-Left resize-pane -L 2
 bind -n C-Right resize-pane -R 2
@@ -47,12 +47,6 @@ bind b split-window -v -c "#{pane_current_path}"
 # bind-key & kill-window
 bind x kill-pane
 
-not_tmux='`echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"` || `echo "#{pane_current_command}" | grep -iqE "(^|\/)fzf"`'
-bind-key -n C-h if-shell "$not_tmux" "send-keys C-h" "select-pane -L"
-bind-key -n C-j if-shell "$not_tmux" "send-keys C-j" "select-pane -D"
-bind-key -n C-k if-shell "$not_tmux" "send-keys C-k" "select-pane -U"
-bind-key -n C-l if-shell "$not_tmux" "send-keys C-l" "select-pane -R"
-
 # Disable escape timeout
 set -sg escape-time 0
 
@@ -72,3 +66,8 @@ set -g status-position bottom
 run '~/.tmux/plugins/tpm/tpm'
 
 setw -g automatic-rename-format "#{b:pane_current_path}"
+
+# not_fzf='`echo "#{pane_current_command}" | grep -iqE "^fzf"`'
+# bind -n C-j if-shell "$not_fzf" "send-keys C-j" "select-pane -D"
+# bind -n C-k if-shell "$not_fzf" "send-keys C-k" "select-pane -U"
+
