--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,5 @@
 # Default shell
-set-option -g default-shell /usr/bin/zsh
+set-option -g default-shell zsh
 
 # Send prefix
 set-option -g prefix C-w
