--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -7,6 +7,11 @@ add_newline = true
 # [character] # The name of the module we are configuring is 'character'
 # success_symbol = '[➜](bold green)' # The 'success_symbol' segment is being set to '➜' with the color 'bold green'
 
+[directory]
+style = 'bold cyan'
+read_only = ' '
+truncation_length = 4
+
 # Disable the package module, hiding it from the prompt completely
 [package]
 disabled = true
