--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -32,7 +32,7 @@ monitor=,preferred,auto,1.6
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = wezterm start --always-new-process
+$terminal = kitty
 $fileManager = thunar
 $menu = rofi -show drun -show-icons 
 $menu-clipboard = rofi -modi "clipboard:greenclip print" -show clipboard -run-command '{cmd}'
@@ -163,7 +163,6 @@ input {
 
     touchpad {
         natural_scroll = false
-
     }
 }
 
@@ -179,30 +178,35 @@ device {
     sensitivity = -0.5
 }
 
-
 ####################
 ### KEYBINDINGSS ###
 ####################
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = ALT # Sets "ALT" key as main modifier
+$mainMod = ALT_L # Sets "ALT" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, ENTER, exec, $terminal
+bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, A, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, space, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, C, exec, $menu-clipboard
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+# bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, E, togglesplit, # dwindle
 
-# Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+# Move focus
+bind = $mainMod, H, movefocus, l
+bind = $mainMod, L, movefocus, r
+bind = $mainMod, K, movefocus, u
+bind = $mainMod, J, movefocus, d
+
+# Move windows
+bind = $mainMod SHIT, H, movewindow, l
+bind = $mainMod SHIT, J, movewindow, d
+bind = $mainMod SHIT, K, movewindow, u
+bind = $mainMod SHIT, L, movewindow, r
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, ampersand, workspace, 1
@@ -228,18 +232,40 @@ bind = $mainMod SHIFT, underscore, movetoworkspace, 8
 bind = $mainMod SHIFT, ccedilla, movetoworkspace, 9
 bind = $mainMod SHIFT, agrave, movetoworkspace, 10
 
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
+# Volume
+bindle =, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+bindle =, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindl =, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 
+
+# Move/resize windows with mainMod + LMB/RMB and dragging
+# bindm = $mainMod, mouse:272, movewindow
+# bindm = $mainMod, mouse:273, resizewindow
+
+# Unbind
+# unbind = , CTRL, P 
+
+# Resize
+bind = $mainMod, R, submap, resize
+
+# will start a submap called "resize"
+# submap = resize
+#
+# # sets repeatable binds for resizing the active window
+# binde = , right, resizeactive, 10 0
+# binde = , left, resizeactive, -10 0
+# binde = , up, resizeactive, 0 -10
+# binde = , down, resizeactive, 0 10
+#
+# # use reset to go back to the global submap
+# bind = , escape, submap, reset 
+#
+# # will reset the submap, which will return to the global submap
+# submap = reset
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
