kitty config working

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,6 +1,5 @@
-font_family: FiraCode Nerd Font 
-font_size: 12
+font_family FiraCode Nerd Font
+font_size 12
 
-startup_mode: default
-
-map ctrl+p no_op
+shell zsh
+confirm_os_window_close 2
