config cliphist hypr and tmux visual mode copy

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -30,7 +30,7 @@ unbind [
 bind u copy-mode 
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi r send -X rectangle-toggle
-bind -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -sel clip'
+bind -T copy-mode-vi y send -X copy-pipe-and-cancel 'wl-copy'
 
 # open split in current directory
 bind c new-window -c "#{pane_current_path}"
