--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -17,8 +17,9 @@ monitor=,preferred,auto,1.6
 $terminal = kitty
 $fileManager = thunar
 $menu = rofi -show drun -show-icons 
-$menu-clipboard = rofi -modi "clipboard:greenclip print" -show clipboard -run-command '{cmd}'
-
+$menu-clipboard = cliphist list | rofi -dmenu | cliphist decode | wl-copy 
+#$menu-clipboard = rofi -modi "clipboard:greenclip print" -show clipboard -run-command '{cmd}'
+#
 #################
 ### AUTOSTART ###
 #################
@@ -30,6 +31,8 @@ $menu-clipboard = rofi -modi "clipboard:greenclip print" -show clipboard -run-co
 exec-once = nm-applet --indicator
 exec-once = waybar
 exec-once = dunst
+exec-once = wl-paste --type text --watch cliphist store # Stores only text data
+exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 
 # For PC specific startup commands like resolution
 # exec-once = bash ~/.config/hypr/start.sh
