--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -166,18 +166,20 @@ device {
 ####################
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = ALT_L # Sets "ALT" key as main modifier
+$mainMod = ALT # Sets "ALT" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, A, killactive,
-bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
+bind = $mainMod SHIFT, M, exit,
+bind = $mainMod, F, exec, $fileManager
 bind = $mainMod, space, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, C, exec, $menu-clipboard
 # bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, E, togglesplit, # dwindle
+bind = $mainMod, Z, fullscreen, 1 
+bind = $mainMod, Q, fullscreen, 
 
 # Move focus
 bind = $mainMod, H, movefocus, l
@@ -186,10 +188,10 @@ bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
 
 # Move windows
-bind = $mainMod SHIT, H, movewindow, l
-bind = $mainMod SHIT, J, movewindow, d
-bind = $mainMod SHIT, K, movewindow, u
-bind = $mainMod SHIT, L, movewindow, r
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, J, movewindow, d
+bind = $mainMod SHIFT, K, movewindow, u
+bind = $mainMod SHIFT, L, movewindow, r
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, ampersand, workspace, 1
@@ -224,6 +226,9 @@ bindle =, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 bindle =, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindl =, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 
+# Luminosity
+bindle =, XF86MonBrightnessUp, exec, brillo -q -U 5
+bindle =, XF86MonBrightnessDown, exec, brillo -q -A 5 
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
