--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -180,6 +180,7 @@ bind = $mainMod, C, exec, $menu-clipboard
 bind = $mainMod, E, togglesplit, # dwindle
 bind = $mainMod, Z, fullscreen, 1 
 bind = $mainMod, Q, fullscreen, 
+bind = $mainMod, ASTERISK, exec, hyprlock 
 
 # Move focus
 bind = $mainMod, H, movefocus, l
