--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -45,6 +45,7 @@ exec-once = wl-paste --type image --watch cliphist store # Stores only image dat
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+# env = ZSH_TMUX_CONFIG,$HOME/.config/tmux/tmux.conf
 
 #####################
 ### LOOK AND FEEL ###
