--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -31,6 +31,7 @@ $menu-clipboard = cliphist list | rofi -dmenu | cliphist decode | wl-copy
 exec-once = nm-applet --indicator
 exec-once = waybar
 exec-once = dunst
+exec-once = wbg ~/dotfiles/assets/wall.jpg
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 
