wip waybar style

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -49,7 +49,14 @@
              "urgent": "",
              "active": "",
              "default": ""
-         }
+         },
+          "persistent_workspaces": {
+              "1": [],
+              "2": [],
+              "3": [],
+              "4": [],
+              "5": []
+          }
      },
     "keyboard-state": {
         "numlock": true,
