--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -19,7 +19,7 @@ $fileManager = thunar
 $menu = rofi -show drun -show-icons 
 $menu-clipboard = cliphist list | rofi -dmenu | cliphist decode | wl-copy 
 #$menu-clipboard = rofi -modi "clipboard:greenclip print" -show clipboard -run-command '{cmd}'
-#
+
 #################
 ### AUTOSTART ###
 #################
@@ -220,6 +220,15 @@ bind = $mainMod SHIFT, underscore, movetoworkspace, 8
 bind = $mainMod SHIFT, ccedilla, movetoworkspace, 9
 bind = $mainMod SHIFT, agrave, movetoworkspace, 10
 
+# Screenshot screen
+bind = , PRINT, exec, grim - | swappy -f -
+
+# Screenshot region
+bind = SHIFT, PRINT, exec, grim -g "$(slurp -w 0)" - | wl-copy 
+bind = CTRL, SHIFT, PRINT, exec, grim -g "$(slurp -w 0)" - | swappy -f -
+
+# Setup wf-recorder
+
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
@@ -251,11 +260,11 @@ binde = , right, resizeactive, 20 0
 binde = , left, resizeactive, -20 0
 binde = , up, resizeactive, 0 -20
 binde = , down, resizeactive, 0 20
-#
-# # use reset to go back to the global submap
+
+# use reset to go back to the global submap
 bind = , escape, submap, reset 
-#
-# # will reset the submap, which will return to the global submap
+
+# will reset the submap, which will return to the global submap
 submap = reset
 
 ##############################
