--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -34,6 +34,7 @@ exec-once = dunst
 exec-once = wbg ~/dotfiles/assets/wall.jpg
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
+exec-once = docker start mdb
 
 # For PC specific startup commands like resolution
 # exec-once = bash ~/.config/hypr/start.sh
@@ -225,7 +226,7 @@ bind = , PRINT, exec, grim - | swappy -f -
 
 # Screenshot region
 bind = SHIFT, PRINT, exec, grim -g "$(slurp -w 0)" - | wl-copy 
-bind = CTRL, SHIFT, PRINT, exec, grim -g "$(slurp -w 0)" - | swappy -f -
+bind = CTRL SHIFT, PRINT, exec, grim -g "$(slurp -w 0)" - | swappy -f -
 
 # Setup wf-recorder
 
