wip rose pine cursor, set desktop hypr workspace to monitors

--- a/hypr/desktop.conf
+++ b/hypr/desktop.conf
@@ -1,4 +1,11 @@
-source = ~/.config/hypr/default.conf 
+source = ~/dotfiles/hypr/default.conf 
+$mon1 = DP-3
+$mon2 = HDMI-A-1
 
-monitor = DP-3, 1920x1080, 0x0, 1
-monitor = HDMI-A-1, 1920x1080, 1920x0, 1 
+monitor = $mon1, 1920x1080, 0x0, 1
+monitor = $mon2, 1920x1080, 1920x0, 1 
+
+workspace=1, monitor:$mon1
+workspace=2, monitor:$mon2
+workspace=3, monitor:$mon1
+workspace=4, monitor:$mon2
