--- a/hypr/laptop.conf
+++ b/hypr/laptop.conf
@@ -1,4 +1,4 @@
-source = ~/.config/hypr/default.conf 
+source = ~/dotfiles/hypr/default.conf 
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,1.6
