adds python script to switch sink

--- a/hypr/default.conf
+++ b/hypr/default.conf
@@ -9,7 +9,6 @@ $terminal = kitty
 $fileManager = thunar
 $menu = rofi -show drun -show-icons 
 $menu-clipboard = cliphist list | rofi -dmenu | cliphist decode | wl-copy 
-#$menu-clipboard = rofi -modi "clipboard:greenclip print" -show clipboard -run-command '{cmd}'
 
 #################
 ### AUTOSTART ###
@@ -170,6 +169,7 @@ bind = $mainMod, F, exec, $fileManager
 bind = $mainMod, space, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, C, exec, $menu-clipboard
+bind = $mainMod, S, exec, ~/dotfiles/scripts/rofi-sink.py
 # bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, E, togglesplit, # dwindle
 bind = $mainMod, Z, fullscreen, 1 
