--- a/hypr/default.conf
+++ b/hypr/default.conf
@@ -18,7 +18,7 @@ $menu-clipboard = cliphist list | rofi -dmenu | cliphist decode | wl-copy
 # Or execute your favorite apps at launch like this:
 
 # exec-once = $terminal
-exec-once = wbg ~/dotfiles/assets/wall.jpg
+exec-once = wbg ~/dotfiles/assets/wallpaper.png
 exec-once = waybar
 exec-once = nm-applet --indicator
 exec-once = dunst
@@ -37,7 +37,6 @@ exec-once = wl-paste --type image --watch cliphist store # Stores only image dat
 env = HYPRCURSOR_THEME,rose-pine-hyprcursor
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-# env = ZSH_TMUX_CONFIG,$HOME/.config/tmux/tmux.conf
 
 #####################
 ### LOOK AND FEEL ###
@@ -49,7 +48,6 @@ env = HYPRCURSOR_SIZE,24
 general { 
     gaps_in = 5
     gaps_out = 5
-
     border_size = 1
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
