--- a/hypr/desktop.conf
+++ b/hypr/desktop.conf
@@ -9,3 +9,4 @@ workspace=1, monitor:$mon1
 workspace=2, monitor:$mon2
 workspace=3, monitor:$mon1
 workspace=4, monitor:$mon2
+workspace=5, monitor:$mon2
