--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -4,7 +4,7 @@ background {
     color = rgba(25, 20, 20, 1.0)
 
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
-    blur_passes = 0 # 0 disables blurring
+    blur_passes = 1 # 0 disables blurring
     blur_size = 7
     noise = 0.0117
     contrast = 0.8916
@@ -22,15 +22,15 @@ input-field {
     dots_center = false
     dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
     outer_color = rgb(151515)
-    inner_color = rgb(200, 200, 200)
-    font_color = rgb(10, 10, 10)
+    inner_color = rgb(26233a)
+    font_color = rgb(191724)
     fade_on_empty = true
     fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered.
     placeholder_text = <i>Input Password...</i> # Text rendered in the input box when it's empty.
     hide_input = false
     rounding = -1 # -1 means complete rounding (circle/oval)
-    check_color = rgb(204, 136, 34)
-    fail_color = rgb(204, 34, 34) # if authentication failed, changes outer_color and fail message color
+    check_color = rgb(f6c177)
+    fail_color = rgb(eb6f92) # if authentication failed, changes outer_color and fail message color
     fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i> # can be set to empty
     fail_timeout = 2000 # milliseconds before fail_text and fail_color disappears
     fail_transition = 300 # transition time in ms between normal outer_color and fail_color
