--- a/hypr/default.conf
+++ b/hypr/default.conf
@@ -20,10 +20,10 @@ $menu-clipboard = cliphist list | rofi -dmenu | cliphist decode | wl-copy
 # exec-once = $terminal
 exec-once = wbg ~/dotfiles/assets/wallpaper.png
 exec-once = dunst
-exec-once = wl-paste --type text --watch cliphist store # Stores only text data
-exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 exec-once = waybar
 exec-once = nm-applet --indicator
+exec-once = wl-paste --type text --watch cliphist store # Stores only text data
+exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -215,6 +215,10 @@ bind = CTRL SHIFT, PRINT, exec, grim -g "$(slurp -w 0)" - | swappy -f -
 
 # Setup wf-recorder
 
+
+# Paste
+bind = CTRL, P, exec, wl-paste
+
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
@@ -223,6 +227,12 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindle =, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 bindle =, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindl =, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+
+# Media Player
+bind =, XF86AudioPlay, exec, playerctl play-pause
+bind =, XF86AudioPause, exec, playerctl pause
+bind =, XF86AudioNext, exec, playerctl next
+bind =, XF86AudioPrev, exec, playerctl previous
 
 # Luminosity
 bindle =, XF86MonBrightnessUp, exec, brillo -q -U 5
