udpates hypr conf

--- a/hypr/default.conf
+++ b/hypr/default.conf
@@ -214,10 +214,7 @@ bind = SHIFT, PRINT, exec, grim -g "$(slurp -w 0)" - | wl-copy
 bind = CTRL SHIFT, PRINT, exec, grim -g "$(slurp -w 0)" - | swappy -f -
 
 # Setup wf-recorder
-
-
-# Paste
-bind = CTRL, P, exec, wl-paste
+# TODO
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -242,20 +239,17 @@ bindle =, XF86MonBrightnessDown, exec, brillo -q -A 5
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-# Unbind
-# unbind = , CTRL, P 
-
 # Resize
 bind = $mainMod, R, submap, resize
 
 # will start a submap called "resize"
 submap = resize
-#
+
 # # sets repeatable binds for resizing the active window
-binde = , right, resizeactive, 20 0
-binde = , left, resizeactive, -20 0
-binde = , up, resizeactive, 0 -20
-binde = , down, resizeactive, 0 20
+binde = , right, resizeactive, 30 0
+binde = , left, resizeactive, -30 0
+binde = , up, resizeactive, 0 -30
+binde = , down, resizeactive, 0 30
 
 # use reset to go back to the global submap
 bind = , escape, submap, reset 
