--- a/hypr/default.conf
+++ b/hypr/default.conf
@@ -232,8 +232,8 @@ bind =, XF86AudioNext, exec, playerctl next
 bind =, XF86AudioPrev, exec, playerctl previous
 
 # Luminosity
-bindle =, XF86MonBrightnessUp, exec, brillo -q -U 5
-bindle =, XF86MonBrightnessDown, exec, brillo -q -A 5 
+bindle = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
+bindle = ,XF86MonBrightnessUp, exec, brightnessctl s +10%
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
