--- a/hypr/default.conf
+++ b/hypr/default.conf
@@ -67,7 +67,7 @@ decoration {
     active_opacity = 1.0
     inactive_opacity = 1.0
 
-     shadow = {
+     shadow {
        enabled = true
        range = 4
        render_power = 3
@@ -86,10 +86,9 @@ decoration {
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = yes, please :)
+    enabled = true
 
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
     bezier = easeOutQuint,0.23,1,0.32,1
     bezier = easeInOutCubic,0.65,0.05,0.36,1
     bezier = linear,0,0,1,1
