binding to record videos

--- a/hypr/default.conf
+++ b/hypr/default.conf
@@ -229,7 +229,7 @@ bind = SHIFT, PRINT, exec, grim -g "$(slurp -w 0)" - | wl-copy
 bind = CTRL SHIFT, PRINT, exec, grim -g "$(slurp -w 0)" - | swappy -f -
 
 # Setup wf-recorder
-# TODO
+bind = $mainMod, PRINT, exec, record
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
