adds gleam snippet

--- a/nvim/lua/snippets/package.json
+++ b/nvim/lua/snippets/package.json
@@ -26,6 +26,10 @@
       {
         "language": "rust",
         "path": "./rust.json"
+      },
+      {
+        "language": "gleam",
+        "path": "./gleam.json"
       }
     ]
   }
