hypr / nvim changes

--- a/hypr/default.conf
+++ b/hypr/default.conf
@@ -24,6 +24,9 @@ exec-once = waybar
 exec-once = nm-applet --indicator
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
+exec-once = [workspace 1 silent] firefox
+exec-once = [workspace 2 silent] kitty -e tmux new -s main 
+exec-once = [workspace 3 silent] kitty -e tmux new -s code 
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -172,7 +175,7 @@ $mainMod = ALT # Sets "ALT" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
-bind = $mainMod, A, killactive,
+bind = $mainMod, A, killactive,,
 bind = $mainMod SHIFT, M, exit,
 bind = $mainMod, F, exec, $fileManager
 bind = $mainMod, space, togglefloating,
@@ -227,6 +230,10 @@ bind = , PRINT, exec, grim - | swappy -f -
 # Screenshot region
 bind = SHIFT, PRINT, exec, grim -g "$(slurp -w 0)" - | wl-copy 
 bind = CTRL SHIFT, PRINT, exec, grim -g "$(slurp -w 0)" - | swappy -f -
+
+# # Terminal
+# bind = $mainMod SHIFT, T, exec, kitty -e tmux attach -t main || tmux new -s main
+# bind = $mainMod SHIFT, Y, exec, kitty -e tmux attach -t code || tmux new -s code
 
 # Setup wf-recorder
 bind = $mainMod, PRINT, exec, record
