kitty font-size, shortcut for yazi in terminal

--- a/hypr/default.conf
+++ b/hypr/default.conf
@@ -224,6 +224,7 @@ bind = $mainMod SHIFT, underscore, movetoworkspace, 8
 bind = $mainMod SHIFT, ccedilla, movetoworkspace, 9
 bind = $mainMod SHIFT, agrave, movetoworkspace, 10
 
+
 # Screenshot screen
 bind = , PRINT, exec, grim - | swappy -f -
 
@@ -231,11 +232,10 @@ bind = , PRINT, exec, grim - | swappy -f -
 bind = SHIFT, PRINT, exec, grim -g "$(slurp -w 0)" - | wl-copy 
 bind = CTRL SHIFT, PRINT, exec, grim -g "$(slurp -w 0)" - | swappy -f -
 
-# # Terminal
-# bind = $mainMod SHIFT, T, exec, kitty -e tmux attach -t main || tmux new -s main
-# bind = $mainMod SHIFT, Y, exec, kitty -e tmux attach -t code || tmux new -s code
+# Terminal
+bind = $mainMod, E, exec, kitty -e yazi
 
-# Setup wf-recorder
+# Setup screencast wf-recorder
 bind = $mainMod, PRINT, exec, record
 
 # Scroll through existing workspaces with mainMod + scroll
