--- a/hypr/default.conf
+++ b/hypr/default.conf
@@ -286,11 +286,6 @@ submap = reset
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-
+windowrulev2 = workspace 4, class:discord
+windowrulev2 = workspace 5, class:Spotify
+windowrulev2 = suppressevent maximize, class:.*
