--- a/hypr/default.conf
+++ b/hypr/default.conf
@@ -287,5 +287,6 @@ submap = reset
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
 windowrulev2 = workspace 4, class:discord
-windowrulev2 = workspace 5, class:Spotify
+windowrulev2 = workspace 4, class:Slack
+windowrulev2 = workspace 5, class:spotify
 windowrulev2 = suppressevent maximize, class:.*
