--- a/hypr/default.conf
+++ b/hypr/default.conf
@@ -290,7 +290,7 @@ windowrulev2 = workspace 4, class:discord
 windowrulev2 = workspace 4, class:Slack
 windowrulev2 = workspace 5, class:spotify
 windowrulev2 = workspace 3, class:^steam_app
-windowrulev2 = workspace 3, class:cs2
+windowrulev2 = fullscreenstate 3, class:cs2
 windowrulev2 = fullscreenstate 3, class:^steam_app
 
 windowrulev2 = suppressevent maximize, class:.*
