--- a/nvim/lua/snippets/package.json
+++ b/nvim/lua/snippets/package.json
@@ -7,7 +7,8 @@
           "javascript",
           "javascriptreact",
           "vue",
-          "svelte"
+          "svelte",
+          "astro"
         ],
         "path": "./javascript.json"
       },
