nvim lsp update

--- a/nvim/lua/snippets/package.json
+++ b/nvim/lua/snippets/package.json
@@ -6,6 +6,7 @@
         "language": [
           "javascript",
           "javascriptreact",
+          "typescript",
           "vue",
           "svelte",
           "astro"
