--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -9,6 +9,10 @@ on  = "/"
 run = 'filter'
 
 [[manager.prepend_keymap]]
+on  = "?"
+run = 'help'
+
+[[manager.prepend_keymap]]
 on   = [ "g", "/" ]
 run  = "cd /"
 desc = "Go root"
@@ -37,4 +41,5 @@ desc = "Goto ~/Downloads"
 on   = [ "g", "P" ]
 run  = "cd ~/Pictures"
 desc = "Goto ~/Pictures"
+
 
