adds rofi emoji, improves rofi theme

--- a/hypr/default.conf
+++ b/hypr/default.conf
@@ -9,6 +9,7 @@ $terminal = kitty
 $fileManager = thunar
 $menu = rofi -show drun -show-icons 
 $menu-clipboard = cliphist list | rofi -dmenu | cliphist decode | wl-copy 
+$menu-emoji = rofi -modi emoji -show emoji 
 
 #################
 ### AUTOSTART ###
@@ -187,6 +188,8 @@ bind = $mainMod, E, togglesplit, # dwindle
 bind = $mainMod, Z, fullscreen, 1 
 bind = $mainMod, Q, fullscreen, 
 bind = $mainMod, ASTERISK, exec, hyprlock 
+bind = $mainMod, E, exec, $menu-emoji
+bind = $mainMod, O, exec, obsidian
 
 # Move focus
 bind = $mainMod, H, movefocus, l
@@ -231,9 +234,6 @@ bind = , PRINT, exec, grim - | swappy -f -
 # Screenshot region
 bind = SHIFT, PRINT, exec, grim -g "$(slurp -w 0)" - | wl-copy 
 bind = CTRL SHIFT, PRINT, exec, grim -g "$(slurp -w 0)" - | swappy -f -
-
-# Terminal
-bind = $mainMod, E, exec, kitty -e yazi
 
 # Setup screencast wf-recorder
 bind = $mainMod, PRINT, exec, record
