--- a/nvim/lua/snippets/package.json
+++ b/nvim/lua/snippets/package.json
@@ -32,6 +32,10 @@
       {
         "language": "gleam",
         "path": "./gleam.json"
+      },
+      {
+        "language": "lua",
+        "path": "./lua.json"
       }
     ]
   }
