--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -12,6 +12,7 @@
   ],
   "modules-right": [
     "pulseaudio",
+    "disk",
     "cpu",
     "memory",
     "temperature",
@@ -56,6 +57,11 @@
         "today": "<span color='#ff6699'><b><u>{}</u></b></span>"
       }
     }
+  },
+  "disk": {
+      "path": "/",
+      "interval": 30,
+      "format": " {percentage_used}%"
   },
   "cpu": {
     "format": " {usage}%",
@@ -112,5 +118,4 @@
     "on-click": "shutdown"
   }
 }
-
 
