--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -1,45 +1,60 @@
 [[mgr.prepend_keymap]]
-on  = "y"
-run = [ '''
+on = "y"
+run = [
+  '''
   shell 'for path in "$@"; do echo "file://$path"; done | wl-copy -t text/uri-list'
-''', "yank" ]
+''',
+  "yank",
+]
 
 [[help.prepend_keymap]]
-on  = "/"
+on = "/"
 run = 'filter'
 
 [[mgr.prepend_keymap]]
-on  = "?"
+on = "b"
+run = 'back'
+
+[[mgr.prepend_keymap]]
+on = "H"
 run = 'help'
 
 [[mgr.prepend_keymap]]
-on   = [ "g", "/" ]
-run  = "cd /"
-desc = "Go root"
+on = ["g", "/"]
+run = "cd /"
+desc = "root"
 
 [[mgr.prepend_keymap]]
-on   = [ "g", "p" ]
-run  = "cd ~/workspace/projects"
-desc = "Goto Projects"
+on = ["g", "p"]
+run = "cd ~/workspace/projects"
+desc = "Projects"
 
 [[mgr.prepend_keymap]]
-on   = [ "g", "a" ]
-run  = "cd ~/workspace/apo"
-desc = "Goto Apos"
+on = ["g", "a"]
+run = "cd ~/workspace/apo"
+desc = "Apos"
 
 [[mgr.prepend_keymap]]
-on   = [ "g", "d" ]
-run  = "cd ~/Documents"
-desc = "Goto ~/Documents"
+on = ["g", "d"]
+run = "cd ~/Documents"
+desc = "Documents"
 
 [[mgr.prepend_keymap]]
-on   = [ "g", "D" ]
-run  = "cd ~/Downloads"
-desc = "Goto ~/Downloads"
+on = ["g", "D"]
+run = "cd ~/Downloads"
+desc = "Downloads"
 
 [[mgr.prepend_keymap]]
-on   = [ "g", "P" ]
-run  = "cd ~/Pictures"
-desc = "Goto ~/Pictures"
+on = ["g", "P"]
+run = "cd ~/Pictures"
+desc = "Pictures"
 
+[[mgr.prepend_keymap]]
+on = ["g", "v"]
+run = "cd ~/Videos"
+desc = "Videos"
 
+[[mgr.prepend_keymap]]
+on = "T"
+run = "plugin toggle-pane max-preview"
+desc = "Maximize or restore the preview pane"
