--- a/hypr/default.conf
+++ b/hypr/default.conf
@@ -29,6 +29,7 @@ exec-once = wl-paste --type image --watch cliphist store # Stores only image dat
 exec-once = [workspace 1 silent] $browser 
 exec-once = [workspace 2 silent] kitty -e tmux new -s main 
 exec-once = [workspace 3 silent] kitty -e tmux new -s code 
+exec-once = [workspace 5 silent] spotify
 
 #############################
 ### ENVIRONMENT VARIABLES ###
