reworkds some mappings, switch to qwerty

--- a/hypr/default.conf
+++ b/hypr/default.conf
@@ -177,17 +177,17 @@ device {
 $mainMod = SUPER 
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, A, killactive,,
+bind = $mainMod, Q, killactive
 bind = $mainMod SHIFT, M, exit,
 bind = $mainMod, space, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, C, exec, $menu-clipboard
 bind = $mainMod, S, exec, ~/dotfiles/scripts/rofi-sink.py
 # bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, E, togglesplit, # dwindle
+bind = $mainMod, N, togglesplit, # dwindle
 bind = $mainMod, Z, fullscreen, 1 
-bind = $mainMod, Q, fullscreen, 
-bind = $mainMod, ASTERISK, exec, hyprlock 
+bind = $mainMod, A, fullscreen, 
+bind = $mainMod, L, exec, hyprlock 
 bind = $mainMod, E, exec, $menu-emoji
 
 # Apps
